canary/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fastapi-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-service
  template:
    metadata:
      labels:
        app: fastapi-service
        version: v01
    spec:
      containers:
      - name: my-fastapi-container
        image: dyddkdlel33/my-fastapi-app
        ports:
          - containerPort: 30000 # FastAPI 애플리케이션이 사용하는 포트
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fastapi-pod-v02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-service
  template:
    metadata:
      labels:
        app: fastapi-service
        version: v02
    spec:
      containers:
      - name: my-fastapi-container
        image: dyddkdlel33/my-fastapi-app_v02
        ports:
          - containerPort: 30000 # FastAPI 애플리케이션이 사용하는 포트


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-tf-serving-restapi-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-tf-serving-restapi-app
  template:
    metadata:
      labels:
        app: my-tf-serving-restapi-app
    spec:
      containers:
      - name: my-tf-serving-restapi-container
        image: dyddkdlel33/my-tf-serving-restapi-app
        ports:
          - containerPort: 8501 # tf-serving 애플리케이션이 사용하는 포트
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-torch-serving-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-torch-serving-app
  template:
    metadata:
      labels:
        app: my-torch-serving-app
    spec:
      containers:
      - name: my-torch-serving-container
        image: dyddkdlel33/my-torch-serving-app
        ports:
          - containerPort: 8080 # torchserving 애플리케이션이 사용하는 포트
