canary/my-fastapi_v02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fastapi-pod-v02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-fastapi-app
      version: v02
  template:
    metadata:
      labels:
        app: my-fastapi-app
        version: v02
    spec:
      containers:
      - name: my-fastapi-container
        image: dyddkdlel33/my-fastapi-app:v02
        ports:
          - containerPort: 30000 # FastAPI 애플리케이션이 사용하는 포트
