canary/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: my-fastapi-app
spec:
  selector:
    app: my-fastapi-app
  ports:
    - name: http
      port: 30000
      targetPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: torch-serving-service
  labels:
    app: my-torch-serving-app
spec:
  selector:
    app: my-torch-serving-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tf-serving-service
  labels:
    app: my-tf-serving-restapi-app
spec:
  selector:
    app: my-tf-serving-restapi-app
  ports:
    - name: http
      port: 8501 # Service Port
      targetPort: 8501 # containerPort와 일치
